# pond_spawn

./: .gitignore  .pylintrc  Cargo.toml  DEVLOG.md  README.md  REFACTOR_RUST_BEVY.md  RULES.md  claude.md  pyproject.toml  requirements.txt  simulation.py
.claude/: settings.local.json
.github/workflows/: coverage.yml  main.yml  pylint.yml  ruff.yml
biomes/: biome.json
brains/: brain.json
cli/: __init__.py  cli_sim_starter.py  menu.py  pygame_visualizer.py  simulate.py
controllers/: README.md  agent.py  brain.py  genome.py  landscape.py  renderer.py
data/: db_init.py  golden.json  golden_test.json  golden_test2.json
genomes/: genome.json
pond_core/: Cargo.toml  README.md
pond_core/src/: biome.rs  brain.rs  cluster.rs  genome.rs  lib.rs  memory.rs  spatial.rs  wasm.rs  world.rs
pond_web/: index.html  renderer.js
scripts/: generate_coverage_badge.py  golden_harness.py
tests/: test_agent.py  test_brain.py  test_genome.py  test_landscape.py  test_simulation.py
